--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ AWS_URL=https://s3-us-west-1.amazonaws.com/
 JWT_SECRET=supersecretsecretsecretsecretsecretsecretsecret
 MAILGUN_KEY=key-50a933ab7e14e4cc21f23d9dbe377bdc
 MAILGUN_DOMAIN=sandbox19714487a4e84db7abe48144d77098b7.mailgun.org
+
+HEROKU_POSTGRESQL_MAROON_URL=postgres://uehentkfddvpaw:Ud1JAs4N83EE28D9DGbdq_YgCi@ec2-54-225-112-119.compute-1.amazonaws.com:5432/dc1lhq4evh5278
