--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "bookless",
   "version": "1.1.1",
   "description": "bookLess: An Ionic project",
-  "main": "./bin/www",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "npm i && node server.js"
   },
   "engines": {
     "node": "4.2.6"
@@ -15,13 +14,15 @@
     "cookie-parser": "^1.4.1",
     "dotenv": "^2.0.0",
     "ejs": "^2.4.1",
+    "express": "^4.13.4",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
+    "mysql": "^2.10.2",
     "path": "^0.12.7",
-    "pg": "^4.5.1",
+    "pg": "^4.5.2",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.20.0"
   },
@@ -29,6 +30,9 @@
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
+  },
+  "production": {
+    "use_env_variable": "DATABASE_URL"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
