--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
+    "morgan": "^1.7.0",
     "mysql": "^2.10.2",
     "path": "^0.12.7",
     "pg": "^4.5.2",
