--- a/package.json
+++ b/package.json
@@ -9,24 +9,361 @@
     "node": "4.2.6"
   },
   "dependencies": {
+    "abbrev": "^1.0.7",
+    "accepts": "^1.3.2",
+    "amdefine": "^1.0.0",
+    "ansi": "^0.3.1",
+    "ansi-regex": "^2.0.0",
+    "ansi-styles": "^2.2.1",
+    "ap": "^0.2.0",
+    "archy": "^1.0.0",
+    "are-we-there-yet": "^1.1.2",
+    "array-differ": "^1.0.0",
+    "array-find-index": "^1.0.1",
+    "array-flatten": "^2.0.0",
+    "array-index": "^1.0.0",
+    "array-uniq": "^1.0.2",
+    "asn1": "^0.2.3",
+    "assert-plus": "^1.0.0",
+    "async": "^2.0.0-rc.2",
+    "async-foreach": "^0.1.3",
+    "aws-sign2": "^0.6.0",
+    "aws4": "^1.3.2",
     "babel": "^6.5.2",
+    "babel-runtime": "^6.6.1",
+    "balanced-match": "^0.3.0",
+    "basic-auth": "^1.0.3",
+    "beeper": "^1.1.0",
+    "bignumber.js": "^2.3.0",
+    "bl": "^1.1.2",
+    "block-stream": "0.0.8",
+    "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
+    "boom": "^3.1.2",
+    "bower": "^1.7.7",
+    "brace-expansion": "^1.1.3",
+    "buffer-writer": "^1.0.1",
+    "bufferstreams": "^1.1.0",
+    "builtin-modules": "^1.1.1",
+    "bytes": "^2.3.0",
+    "camelcase": "^2.1.1",
+    "camelcase-keys": "^2.1.0",
+    "caseless": "^0.11.0",
+    "chalk": "^1.1.3",
+    "clean-css": "^3.4.10",
+    "cliui": "^3.1.2",
+    "clone": "^1.0.2",
+    "clone-stats": "0.0.1",
+    "code-point-at": "^1.0.0",
+    "color-convert": "^1.1.2",
+    "combined-stream": "^1.0.5",
+    "commander": "^2.9.0",
+    "concat-map": "0.0.1",
+    "concat-stream": "^1.5.1",
+    "concat-with-sourcemaps": "^1.0.4",
+    "config-chain": "^1.1.10",
+    "content-disposition": "^0.5.1",
+    "content-type": "^1.0.1",
+    "cookie": "^0.2.3",
     "cookie-parser": "^1.4.1",
+    "cookie-signature": "^1.0.6",
+    "core-js": "^2.2.1",
+    "core-util-is": "^1.0.2",
     "cors": "^2.7.1",
+    "cross-spawn": "^2.1.5",
+    "cross-spawn-async": "^2.1.9",
+    "cryptiles": "^3.0.0",
+    "d": "^1.0.0",
+    "dashdash": "^1.13.0",
+    "dateformat": "^1.0.12",
+    "debug": "^2.2.0",
+    "decamelize": "^1.2.0",
+    "defaults": "^1.0.3",
+    "delayed-stream": "^1.0.0",
+    "delegates": "^1.0.0",
+    "depd": "^1.1.0",
+    "deprecated": "0.0.1",
+    "destroy": "^1.0.4",
     "dotenv": "^2.0.0",
+    "dottie": "^1.1.1",
+    "double-ended-queue": "^2.1.0-0",
+    "duplexer2": "^0.1.4",
+    "ecc-jsbn": "^0.1.1",
+    "ee-first": "^1.1.1",
     "ejs": "^2.4.1",
+    "end-of-stream": "^1.1.0",
+    "error-ex": "^1.3.0",
+    "es5-ext": "^0.10.11",
+    "es6-iterator": "^2.0.0",
+    "es6-symbol": "^3.0.2",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^1.0.5",
+    "etag": "^1.7.0",
     "express": "^4.13.4",
-    "gulp": "^3.5.6",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4",
+    "extend": "^3.0.0",
+    "extsprintf": "^1.3.0",
+    "fancy-log": "^1.2.0",
+    "finalhandler": "^0.4.1",
+    "find-index": "^1.1.0",
+    "find-up": "^1.1.2",
+    "findup-sync": "^0.3.0",
+    "first-chunk-stream": "^2.0.0",
+    "flagged-respawn": "^0.3.2",
+    "forever-agent": "^0.6.1",
+    "form-data": "^1.0.0-rc4",
+    "forwarded": "^0.1.0",
+    "fresh": "^0.3.0",
+    "fstream": "^1.0.8",
+    "gauge": "^1.2.7",
+    "gaze": "^1.0.0",
+    "generate-function": "^2.0.0",
+    "generate-object-property": "^1.2.0",
+    "generic-pool": "^2.4.2",
+    "get-stdin": "^5.0.1",
+    "glob": "^7.0.3",
+    "glob-stream": "^5.3.2",
+    "glob-watcher": "^2.0.0",
+    "glob2base": "0.0.12",
+    "globule": "^0.2.0",
+    "glogg": "^1.0.0",
+    "graceful-fs": "^4.1.3",
+    "graceful-readlink": "^1.0.1",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^0.3.13",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.2.0",
+    "gulp-util": "^2.2.20",
+    "gulplog": "^1.0.0",
+    "har-validator": "^2.1.1",
+    "has-ansi": "^2.0.0",
+    "has-gulplog": "^0.1.0",
+    "has-unicode": "^2.0.0",
+    "hashmap": "^2.0.4",
+    "hawk": "^4.1.2",
+    "hoek": "^3.0.4",
+    "hosted-git-info": "^2.1.4",
+    "http-errors": "^1.4.0",
+    "http-signature": "^1.1.1",
+    "iconv-lite": "^0.4.13",
+    "indent-string": "^2.1.0",
+    "inflection": "^1.8.0",
+    "inflight": "^1.0.4",
+    "inherits": "^2.0.1",
+    "ini": "^1.3.4",
+    "interpret": "^1.0.0",
+    "invert-kv": "^1.0.0",
+    "ipaddr.js": "^1.1.0",
+    "is-absolute": "^0.2.4",
+    "is-arrayish": "^0.3.0",
+    "is-builtin-module": "^1.0.0",
+    "is-finite": "^1.0.1",
+    "is-fullwidth-code-point": "^1.0.0",
+    "is-my-json-valid": "^2.13.1",
+    "is-property": "^1.0.2",
+    "is-relative": "^0.2.1",
+    "is-typedarray": "^1.0.0",
+    "is-utf8": "^0.2.1",
+    "isarray": "^1.0.0",
+    "isexe": "^1.1.2",
+    "isstream": "^0.1.2",
+    "jodid25519": "^1.0.2",
+    "jsbn": "^0.1.0",
+    "json-schema": "^0.2.2",
+    "json-stringify-safe": "^5.0.1",
+    "jsonpointer": "^3.0.0",
+    "jsprim": "^1.2.2",
+    "knex": "^0.10.0",
+    "lcid": "^1.0.0",
+    "liftoff": "^2.2.1",
+    "load-json-file": "^1.1.0",
+    "lodash": "^4.7.0",
+    "lodash._basecopy": "^3.0.1",
+    "lodash._basetostring": "^3.0.1",
+    "lodash._basevalues": "^3.0.0",
+    "lodash._escapehtmlchar": "^2.4.1",
+    "lodash._escapestringchar": "^2.4.1",
+    "lodash._getnative": "^3.9.1",
+    "lodash._htmlescapes": "^2.4.1",
+    "lodash._isiterateecall": "^3.0.9",
+    "lodash._isnative": "^2.4.1",
+    "lodash._objecttypes": "^2.4.1",
+    "lodash._reescape": "^3.0.0",
+    "lodash._reevaluate": "^3.0.0",
+    "lodash._reinterpolate": "^3.0.0",
+    "lodash._reunescapedhtml": "^2.4.1",
+    "lodash._root": "^3.0.1",
+    "lodash._shimkeys": "^2.4.1",
+    "lodash.defaults": "^4.0.1",
+    "lodash.escape": "^4.0.0",
+    "lodash.isarguments": "^3.0.8",
+    "lodash.isarray": "^4.0.0",
+    "lodash.isobject": "^3.0.2",
+    "lodash.keys": "^4.0.5",
+    "lodash.pad": "^4.1.0",
+    "lodash.padend": "^4.2.0",
+    "lodash.padstart": "^4.2.0",
+    "lodash.repeat": "^4.0.0",
+    "lodash.restparam": "^3.6.1",
+    "lodash.template": "^4.2.3",
+    "lodash.templatesettings": "^4.0.1",
+    "lodash.tostring": "^4.1.2",
+    "lodash.values": "^4.1.0",
+    "loud-rejection": "^1.3.0",
+    "lru-cache": "^4.0.1",
+    "map-obj": "^1.0.1",
+    "media-typer": "^0.3.0",
+    "memory-cache": "^0.1.4",
+    "meow": "^3.7.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^1.3.4",
+    "mime-db": "^1.22.0",
+    "mime-types": "^2.1.10",
+    "minimatch": "^3.0.0",
+    "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.12.0",
+    "moment-timezone": "^0.5.3",
     "morgan": "^1.7.0",
+    "ms": "^0.7.1",
+    "multipipe": "^0.3.0",
     "mysql": "^2.10.2",
+    "nan": "^2.2.1",
+    "negotiator": "^0.6.0",
+    "node-gyp": "^3.3.1",
+    "node-sass": "^3.4.2",
+    "node-uuid": "^1.4.7",
+    "nopt": "^3.0.6",
+    "normalize-package-data": "^2.3.5",
+    "npmconf": "^2.1.2",
+    "npmlog": "^2.0.3",
+    "number-is-nan": "^1.0.0",
+    "oauth-sign": "^0.8.1",
+    "object-assign": "^4.0.1",
+    "objection": "^0.4.0",
+    "on-finished": "^2.3.0",
+    "on-headers": "^1.0.1",
+    "once": "^1.3.3",
+    "orchestrator": "^0.3.7",
+    "ordered-read-streams": "^0.3.0",
+    "os-homedir": "^1.0.1",
+    "os-locale": "^1.4.0",
+    "os-shim": "^0.1.3",
+    "os-tmpdir": "^1.0.1",
+    "osenv": "^0.1.3",
+    "packet-reader": "^0.2.0",
+    "parse-json": "^2.2.0",
+    "parseurl": "^1.3.1",
     "path": "^0.12.7",
+    "path-array": "^1.0.1",
+    "path-exists": "^2.1.0",
+    "path-is-absolute": "^1.0.0",
+    "path-to-regexp": "^1.2.1",
+    "path-type": "^1.1.0",
     "pg": "^4.5.2",
+    "pg-connection-string": "^0.1.3",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.20.0"
+    "pg-types": "^1.10.0",
+    "pgpass": "0.0.3",
+    "pify": "^2.3.0",
+    "pinkie": "^2.0.4",
+    "pinkie-promise": "^2.0.0",
+    "pool2": "^1.3.4",
+    "postgres-array": "^1.0.0",
+    "postgres-bytea": "^1.0.0",
+    "postgres-date": "^1.0.1",
+    "postgres-interval": "^1.0.1",
+    "pretty-hrtime": "^1.0.2",
+    "process": "^0.11.2",
+    "process-nextick-args": "^1.0.6",
+    "proto-list": "^1.2.4",
+    "proxy-addr": "^1.0.10",
+    "pseudomap": "^1.0.2",
+    "qs": "^6.1.0",
+    "range-parser": "^1.0.3",
+    "raw-body": "^2.1.6",
+    "read-pkg": "^1.1.0",
+    "read-pkg-up": "^1.0.1",
+    "readable-stream": "^2.0.6",
+    "rechoir": "^0.6.2",
+    "redent": "^1.0.0",
+    "repeating": "^2.0.0",
+    "replace-ext": "0.0.1",
+    "request": "^2.69.0",
+    "resolve": "^1.1.7",
+    "retry-as-promised": "^2.0.1",
+    "rimraf": "^2.5.2",
+    "sass-graph": "^2.1.1",
+    "semver": "^5.1.0",
+    "send": "^0.13.2",
+    "sequelize": "^3.20.0",
+    "sequencify": "0.0.7",
+    "serve-static": "^1.10.2",
+    "shelljs": "^0.3.0",
+    "shimmer": "^1.1.0",
+    "sigmund": "^1.0.1",
+    "signal-exit": "^2.1.2",
+    "simple-backoff": "^1.0.0",
+    "sntp": "^2.0.0",
+    "source-map": "^0.5.3",
+    "sparkles": "^1.0.0",
+    "spawn-sync": "^1.0.15",
+    "spdx-correct": "^1.0.2",
+    "spdx-exceptions": "^1.0.4",
+    "spdx-expression-parse": "^1.0.2",
+    "spdx-license-ids": "^1.2.0",
+    "split": "^1.0.0",
+    "sshpk": "^1.7.4",
+    "statuses": "^1.2.1",
+    "stream-consume": "^0.1.0",
+    "string-width": "^1.0.1",
+    "string_decoder": "^0.10.31",
+    "stringstream": "0.0.5",
+    "strip-ansi": "^3.0.1",
+    "strip-bom": "^2.0.0",
+    "strip-indent": "^1.0.1",
+    "supports-color": "^3.1.2",
+    "tar": "^2.2.1",
+    "through": "^2.3.8",
+    "through2": "^2.0.1",
+    "tildify": "^1.1.2",
+    "time-stamp": "^1.0.0",
+    "toposort-class": "^1.0.1",
+    "tough-cookie": "^2.2.2",
+    "trim-newlines": "^1.0.0",
+    "tunnel-agent": "^0.4.2",
+    "tv4": "^1.2.7",
+    "tv4-formats": "^1.0.2",
+    "tweetnacl": "^0.14.3",
+    "type-is": "^1.6.12",
+    "typedarray": "0.0.6",
+    "uid-number": "0.0.6",
+    "underscore": "^1.8.3",
+    "unique-stream": "^2.2.1",
+    "unpipe": "^1.0.0",
+    "user-home": "^2.0.0",
+    "util": "^0.10.3",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.0",
+    "v8flags": "^2.0.11",
+    "validate-npm-package-license": "^3.0.1",
+    "validator": "^5.1.0",
+    "vary": "^1.1.0",
+    "verror": "^1.6.1",
+    "vinyl": "^1.1.1",
+    "vinyl-fs": "^2.4.2",
+    "vinyl-sourcemaps-apply": "^0.2.1",
+    "wellknown": "^0.4.1",
+    "which": "^1.2.4",
+    "window-size": "^0.2.0",
+    "wkx": "^0.2.0",
+    "wrap-ansi": "^2.0.0",
+    "wrappy": "^1.0.1",
+    "xtend": "^4.0.1",
+    "y18n": "^3.2.1",
+    "yallist": "^2.0.0",
+    "yargs": "^4.3.2"
   },
   "devDependencies": {
     "bower": "^1.3.3",
