--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.1",
   "description": "bookLess: An Ionic project",
   "scripts": {
-    "start": "npm i && node server.js"
+    "start": "node server.js"
   },
   "engines": {
     "node": "4.2.6"
@@ -27,7 +27,9 @@
     "assert-plus": "^1.0.0",
     "async": "^2.0.0-rc.2",
     "async-foreach": "^0.1.3",
+    "aws-lib": "^0.3.0",
     "aws-sign2": "^0.6.0",
+    "aws-signer-v4": "0.0.3",
     "aws4": "^1.3.2",
     "babel": "^6.5.2",
     "babel-runtime": "^6.6.1",
